--- a/CL_PROJECT_CODE/Kerasmodel/model.ipynb
+++ b/CL_PROJECT_CODE/Kerasmodel/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "['README', 'train']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "['pos']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,19 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.04833598, -0.00230513,  0.00545232, -0.00936279,  0.03290052],\n",
-       "       [ 0.04968916,  0.03968636, -0.04100504, -0.00653931, -0.02838165],\n",
-       "       [ 0.02774164, -0.02049837, -0.0340514 , -0.041743  ,  0.00354023]],\n",
+       "array([[ 0.03471095, -0.03843842, -0.03425549, -0.02572281,  0.00769442],\n",
+       "       [ 0.00233169, -0.02095674,  0.03440174,  0.03112933, -0.0417734 ],\n",
+       "       [ 0.03936919, -0.04475255,  0.02868069, -0.03221764, -0.04514248]],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "TensorShape([2, 3, 5])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,9 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:6 out of the last 6 calls to <function PreprocessingLayer.make_adapt_function.<locals>.adapt_step at 0x7f2f3ca6e680> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a custom standardization function to strip HTML break tags '<br />'.\n",
     "def custom_standardization(input_data):\n",
@@ -204,7 +212,7 @@
     "\n",
     "\n",
     "# Vocabulary size and number of words in a sequence.\n",
-    "vocab_size = 10000\n",
+    "vocab_size = 1000000\n",
     "sequence_length = 100\n",
     "\n",
     "# Use the text vectorization layer to normalize, split, and map strings to\n",
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -268,44 +276,44 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "1/1 [==============================] - 1s 617ms/step - loss: 0.6926 - accuracy: 1.0000 - val_loss: 0.6917 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 1s 842ms/step - loss: 0.6929 - accuracy: 1.0000 - val_loss: 0.6886 - val_accuracy: 1.0000\n",
       "Epoch 2/15\n",
-      "1/1 [==============================] - 0s 41ms/step - loss: 0.6891 - accuracy: 1.0000 - val_loss: 0.6896 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 133ms/step - loss: 0.6891 - accuracy: 1.0000 - val_loss: 0.6862 - val_accuracy: 1.0000\n",
       "Epoch 3/15\n",
-      "1/1 [==============================] - 0s 38ms/step - loss: 0.6859 - accuracy: 1.0000 - val_loss: 0.6872 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 178ms/step - loss: 0.6857 - accuracy: 1.0000 - val_loss: 0.6837 - val_accuracy: 1.0000\n",
       "Epoch 4/15\n",
-      "1/1 [==============================] - 0s 40ms/step - loss: 0.6828 - accuracy: 1.0000 - val_loss: 0.6848 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 148ms/step - loss: 0.6822 - accuracy: 1.0000 - val_loss: 0.6812 - val_accuracy: 1.0000\n",
       "Epoch 5/15\n",
-      "1/1 [==============================] - 0s 39ms/step - loss: 0.6795 - accuracy: 1.0000 - val_loss: 0.6824 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 133ms/step - loss: 0.6790 - accuracy: 1.0000 - val_loss: 0.6786 - val_accuracy: 1.0000\n",
       "Epoch 6/15\n",
-      "1/1 [==============================] - 0s 41ms/step - loss: 0.6761 - accuracy: 1.0000 - val_loss: 0.6800 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 127ms/step - loss: 0.6755 - accuracy: 1.0000 - val_loss: 0.6760 - val_accuracy: 1.0000\n",
       "Epoch 7/15\n",
-      "1/1 [==============================] - 0s 42ms/step - loss: 0.6727 - accuracy: 1.0000 - val_loss: 0.6775 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 130ms/step - loss: 0.6720 - accuracy: 1.0000 - val_loss: 0.6734 - val_accuracy: 1.0000\n",
       "Epoch 8/15\n",
-      "1/1 [==============================] - 0s 42ms/step - loss: 0.6692 - accuracy: 1.0000 - val_loss: 0.6751 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 138ms/step - loss: 0.6684 - accuracy: 1.0000 - val_loss: 0.6707 - val_accuracy: 1.0000\n",
       "Epoch 9/15\n",
-      "1/1 [==============================] - 0s 44ms/step - loss: 0.6657 - accuracy: 1.0000 - val_loss: 0.6726 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 135ms/step - loss: 0.6647 - accuracy: 1.0000 - val_loss: 0.6680 - val_accuracy: 1.0000\n",
       "Epoch 10/15\n",
-      "1/1 [==============================] - 0s 41ms/step - loss: 0.6621 - accuracy: 1.0000 - val_loss: 0.6701 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 133ms/step - loss: 0.6610 - accuracy: 1.0000 - val_loss: 0.6653 - val_accuracy: 1.0000\n",
       "Epoch 11/15\n",
-      "1/1 [==============================] - 0s 44ms/step - loss: 0.6585 - accuracy: 1.0000 - val_loss: 0.6676 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 142ms/step - loss: 0.6572 - accuracy: 1.0000 - val_loss: 0.6626 - val_accuracy: 1.0000\n",
       "Epoch 12/15\n",
-      "1/1 [==============================] - 0s 43ms/step - loss: 0.6548 - accuracy: 1.0000 - val_loss: 0.6651 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 141ms/step - loss: 0.6534 - accuracy: 1.0000 - val_loss: 0.6598 - val_accuracy: 1.0000\n",
       "Epoch 13/15\n",
-      "1/1 [==============================] - 0s 43ms/step - loss: 0.6510 - accuracy: 1.0000 - val_loss: 0.6624 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 143ms/step - loss: 0.6495 - accuracy: 1.0000 - val_loss: 0.6570 - val_accuracy: 1.0000\n",
       "Epoch 14/15\n",
-      "1/1 [==============================] - 0s 42ms/step - loss: 0.6472 - accuracy: 1.0000 - val_loss: 0.6596 - val_accuracy: 1.0000\n",
+      "1/1 [==============================] - 0s 137ms/step - loss: 0.6455 - accuracy: 1.0000 - val_loss: 0.6541 - val_accuracy: 1.0000\n",
       "Epoch 15/15\n",
-      "1/1 [==============================] - 0s 43ms/step - loss: 0.6434 - accuracy: 1.0000 - val_loss: 0.6568 - val_accuracy: 1.0000\n"
+      "1/1 [==============================] - 0s 132ms/step - loss: 0.6415 - accuracy: 1.0000 - val_loss: 0.6512 - val_accuracy: 1.0000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f2f7c277af0>"
+       "<keras.callbacks.History at 0x7f2f1ffb3310>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,32 +328,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "Model: \"sequential_6\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " text_vectorization_3 (TextV  (None, 100)              0         \n",
+      " text_vectorization_5 (TextV  (None, 100)              0         \n",
       " ectorization)                                                   \n",
       "                                                                 \n",
-      " embedding (Embedding)       (None, 100, 20)           200000    \n",
+      " embedding (Embedding)       (None, 100, 20)           20000000  \n",
       "                                                                 \n",
-      " global_average_pooling1d_4   (None, 20)               0         \n",
+      " global_average_pooling1d_6   (None, 20)               0         \n",
       " (GlobalAveragePooling1D)                                        \n",
       "                                                                 \n",
-      " dense_8 (Dense)             (None, 16)                336       \n",
+      " dense_12 (Dense)            (None, 16)                336       \n",
       "                                                                 \n",
-      " dense_9 (Dense)             (None, 1)                 17        \n",
+      " dense_13 (Dense)            (None, 1)                 17        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 200,353\n",
-      "Trainable params: 200,353\n",
+      "Total params: 20,000,353\n",
+      "Trainable params: 20,000,353\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +379,7 @@
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 10542), started 0:28:40 ago. (Use '!kill 10542' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 10542), started 5:22:45 ago. (Use '!kill 10542' to kill it.)"
       ]
      },
      "metadata": {},
@@ -381,11 +389,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-c056d1d6a3477f8c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-a07b7d3663ba05b2\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-c056d1d6a3477f8c\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-a07b7d3663ba05b2\");\n",
        "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -412,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,20 +460,6 @@
     "except Exception:\n",
     "  pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
