--- a/models/Kerasmodel/model.ipynb
+++ b/models/Kerasmodel/model.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing the required libraries\n",
+    "### we import libraries for creating word embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +23,35 @@
     "\n",
     "from tensorflow.keras import Sequential\n",
     "from tensorflow.keras.layers import Dense, Embedding, GlobalAveragePooling1D\n",
-    "from tensorflow.keras.layers import TextVectorization\n"
+    "from tensorflow.keras.layers import TextVectorization\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining DataSet \n",
+    "The data set is in form of 1 sentence per file \n",
+    "we may give path to our dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['train']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# getting the dataset \n",
     "dataset ='../../abp_news_hindi_data'\n",
@@ -32,23 +61,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Defining The training dataset \n",
+    "### providing the path to our data set and taking a look at the train directory the pos file contains data in files "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pos']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_dir = '../../abp_news_hindi_data/train/'\n",
     "os.listdir(train_dir)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "batch_size = 8\n",
-    "seed = 123\n",
+    "### Use the train directory to create both train and validation datasets with a split of 20% for validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 140690 files belonging to 1 classes.\n",
+      "Using 112552 files for training.\n",
+      "Found 140690 files belonging to 1 classes.\n",
+      "Using 28138 files for validation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 8 # batch size is a number of samples processed before the model is updated. \n",
+    "seed = 123 # Optional random seed for shuffling and transformations.\n",
+    "\n",
     "train_ds = tf.keras.utils.text_dataset_from_directory(\n",
     "    '../../abp_news_hindi_data/train', batch_size=batch_size, validation_split=0.2,\n",
     "    subset='training', seed=seed)\n",
@@ -58,42 +125,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".cache() keeps data in memory after it's loaded off disk. This will ensure the dataset does not become a bottleneck while training our model. If our dataset is too large to fit into memory, we can also use this method to create a performant on-disk cache, which is more efficient to read than many small files.\n",
+    "\n",
+    ".prefetch() overlaps data preprocessing and model execution while training."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "AUTOTUNE = tf.data.AUTOTUNE\n",
+    "AUTOTUNE = tf.data.AUTOTUNE \n",
     "\n",
     "train_ds = train_ds.cache().prefetch(buffer_size=AUTOTUNE)\n",
     "val_ds = val_ds.cache().prefetch(buffer_size=AUTOTUNE)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Embed a 1,000 word vocabulary into 5 dimensions.\n",
-    "embedding_layer = tf.keras.layers.Embedding(10000, 20)"
+    "The Embedding layer can be understood as a lookup table that maps from integer indices (which stand for specific words) to dense vectors (their embeddings). The dimensionality (or width) of the embedding is a parameter we can experiment with to see what works well for our problem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = embedding_layer(tf.constant([1, 2, 3]))\n",
+    "# Embed a 10000 word vocabulary into 20 dimensions.\n",
+    "embedding_layer = tf.keras.layers.Embedding(10000, 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we create an Embedding layer, the weights for the embedding are randomly initialized (just like any other layer). During training, they are gradually adjusted via backpropagation. Once trained, the learned word embeddings will roughly encode similarities between words (as they oure learned for the specific problem our model is trained on).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.04836544, -0.00398915, -0.00302079, -0.01337272,  0.04914557,\n",
+       "        -0.00063807,  0.03805279,  0.02288983,  0.02547536,  0.03475584,\n",
+       "        -0.03471668, -0.01824844, -0.03994088, -0.03596375,  0.00344055,\n",
+       "         0.00052395,  0.01369634,  0.04545544,  0.00927707,  0.03058562],\n",
+       "       [ 0.00970787, -0.01242999, -0.02833358, -0.00133804,  0.00713963,\n",
+       "        -0.0256909 ,  0.000185  ,  0.02302809, -0.034005  , -0.02717756,\n",
+       "         0.01178741, -0.01895106, -0.00683886,  0.02950421,  0.0277385 ,\n",
+       "         0.02109872, -0.04545908, -0.03058007,  0.02133251, -0.02800335],\n",
+       "       [-0.03360381,  0.02973726,  0.00599277,  0.0071152 ,  0.03482497,\n",
+       "        -0.03113912,  0.03065679,  0.03601806,  0.03774877,  0.03456653,\n",
+       "        -0.01595533, -0.01671573,  0.03010172, -0.0072564 , -0.04933568,\n",
+       "        -0.01949699,  0.00853875, -0.01646788,  0.01688248,  0.01374885]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = embedding_layer(tf.constant([1, 2, 3])) # If we pass an integer to an embedding layer, the result replaces each integer with the vector from the embedding table:\n",
+    "\n",
     "result.numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TensorShape([2, 3, 20])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = embedding_layer(tf.constant([[0, 1, 2], [3, 4, 5]]))\n",
     "result.shape"
@@ -101,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a custom standardization function to strip HTML break tags '<br />'.\n",
     "def custom_standardization(input_data):\n",
-    "  lowercase = tf.strings.lower(input_data)\n",
-    "  stripped_html = tf.strings.regex_replace(lowercase, '<br />', ' ')\n",
+    "  loourcase = tf.strings.loour(input_data)\n",
+    "  stripped_html = tf.strings.regex_replace(loourcase, '<br />', ' ')\n",
     "  return tf.strings.regex_replace(stripped_html,\n",
     "                                  '[%s]' % re.escape(string.punctuation), '')\n",
     "\n",
@@ -133,16 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# there are various arguments like \n",
     "embedding_dim=100\n",
     "\n",
     "model = Sequential([\n",
     "  vectorize_layer,\n",
-    "  Embedding(vocab_size, embedding_dim, name=\"embedding\"),\n",
+    "  Embedding(vocab_size, embedding_dim, name=\"embedding\"), # The Embedding layer takes the integer-encoded vocabulary and looks up the embedding vector for each word-index.\n",
+    "  These vectors are learned as the model trains. The vectors add a dimension to the output array. \n",
+    "  The resulting dimensions are: (batch, sequence, embedding).\n",
+    "\n",
     "  GlobalAveragePooling1D(),\n",
+    "  # The GlobalAveragePooling1D layer returns a fixed-length output vector for each example by averaging over the sequence dimension. This allows the model to handle input of variable length, in the simplest way possible.\n",
     "  Dense(10, activation='relu'),\n",
     "  Dense(1)\n",
     "])"
@@ -150,16 +280,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#We will use TensorBoard to visualize metrics including loss and accuracy. \n",
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=\"logs\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compile and train the model using the Adam optimizer and BinaryCrossentropy loss.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +310,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14069/14069 [==============================] - 381s 27ms/step - loss: 0.0028 - accuracy: 1.0000 - val_loss: 4.7224e-08 - val_accuracy: 1.0000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f8e94244190>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(\n",
     "    train_ds,\n",
@@ -183,40 +341,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " text_vectorization (TextVec  (None, 100)              0         \n",
+      " torization)                                                     \n",
+      "                                                                 \n",
+      " embedding (Embedding)       (None, 100, 100)          5000000   \n",
+      "                                                                 \n",
+      " global_average_pooling1d (G  (None, 100)              0         \n",
+      " lobalAveragePooling1D)                                          \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 10)                1010      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 11        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 5,001,021\n",
+      "Trainable params: 5,001,021\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-f14dd7ddc5adcb78\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-f14dd7ddc5adcb78\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# Visualize the model metrics in TensorBoard.\n",
     "#docs_infra: no_execute\n",
     "%load_ext tensorboard\n",
     "%tensorboard --logdir logs"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Retrieve the trained word embeddings and save them to disk"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Next, retrieve the word embeddings learned during training. The embeddings are weights of the Embedding layer in the model. \n",
+    "# The weights matrix is of shape (vocab_size, embedding_dimension).\n",
     "weights = model.get_layer('embedding').get_weights()[0]\n",
     "vocab = vectorize_layer.get_vocabulary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# copying the vectors and metadata to files to use them to visualize word embeddings\n",
     "out_v = io.open('vectors.tsv', 'w', encoding='utf-8')\n",
     "out_m = io.open('metadata.tsv', 'w', encoding='utf-8')\n",
     "\n",
@@ -228,29 +452,18 @@
     "    out_v.write('\\t'.join([str(x) for x in vec]) + \"\\n\")\n",
     "    out_m.write(word + \"\\n\")\n",
     "out_v.close()\n",
-    "out_m.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "  from google.colab import files\n",
-    "  files.download('vectors.tsv')\n",
-    "  files.download('metadata.tsv')\n",
-    "except Exception:\n",
-    "  pass"
+    "out_m.close()\n",
+    "\n",
+    "\n",
+    "# these files will be then use in comparer.ipynb"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('neural_n')",
+   "display_name": "neural_n",
    "language": "python",
-   "name": "python3"
+   "name": "neural_n"
   },
   "language_info": {
    "codemirror_mode": {
@@ -262,12 +475,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8a0e8d9c06cab710e9ae9691e7d0417c31968365137cec4f6d7aac84a7634fa2"
+    "hash": "e00a3011472f5fbbf86e92c2a403d5265e16a794d132e0abaf5220518194b2b3"
    }
   }
  },
