Readme.md added, requirements.txt added, renamed some files for easy understanding

--- a/models/Kerasmodel/comparer.ipynb
+++ b/models/Kerasmodel/comparer.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# making data dictionaries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -8,15 +15,21 @@
    "source": [
     "#making the dictionaries of the data \n",
     "\n",
-    "vectors_file= open('old_actual/vectors.tsv','r')\n",
+    "vectors_file= open('abp_trained/vectors.tsv','r') \n",
+    "# vectors of all words in metadata these are the already calculated vectors using this repository code\n",
     "\n",
     "vector_dict = {}\n",
-    "with open('old_actual/metadata.tsv','r') as words_file:\n",
+    "with open('abp_trained/metadata.tsv','r') as words_file:\n",
     "    for line in words_file:\n",
     "        vector= vectors_file.readline().split('\\t')\n",
-    "        vector_dict.update({line.strip('\\n'):vector})\n",
-    "        \n",
-    "\n"
+    "        vector_dict.update({line.strip('\\n'):vector})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# making dictionaries for attributes "
    ]
   },
   {
@@ -27,7 +40,8 @@
    "source": [
     "# creating different dict for weat \n",
     "import os\n",
-    "path = '../../attribute_list_hindi'\n",
+    "\n",
+    "path = '../../attribute_list_hindi' #path to file containing the list of attributes\n",
     "\n",
     "file_list_new = os.listdir(path)\n",
     "file_list=[]\n",
@@ -49,6 +63,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating the distances \n",
+    "## between attributes of different domain with male and female vectors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -57,6 +79,12 @@
     "import math \n",
     "\n",
     "def eu_dist(v1, v2):\n",
+    "    '''\n",
+    "    Calculates distances betweeen 2 vectors. \n",
+    "    dimensions must be same.\n",
+    "    Arguments : v1(list)  , v2(list)\n",
+    "    Returns  : (list)result\n",
+    "    '''\n",
     "    dist=0\n",
     "    for i in range(len(v1)):\n",
     "        dist+=((v1[i] -v2[i])**2)\n",
@@ -64,6 +92,12 @@
     "    return dist\n",
     "\n",
     "def add_list(l1, l2):\n",
+    "    '''\n",
+    "    adds two list such that result[i]= l1[i]+l2[i]\n",
+    "    Arguments : l1(list)  , l2(list)\n",
+    "    Returns  : (list)result\n",
+    "    \n",
+    "    '''\n",
     "    result=[]\n",
     "    if len(l1)==0:\n",
     "        return l2\n",
@@ -72,10 +106,9 @@
     "    return result\n",
     "\n",
     "\n",
-    "average_dict={}\n",
+    "average_dict={} # dictionary containing averages of all attributes\n",
     "\n",
     "for key , values in weat_dict.items():\n",
-    "    \n",
     "    i =0\n",
     "    average_vec=[]\n",
     "    \n",
@@ -92,7 +125,6 @@
     "        average_vec[j]=average_vec[j]/i\n",
     "        # print(type(average_vec[j]))\n",
     "        \n",
-    "    # print(i)\n",
     "    average_dict.update({key:average_vec })\n",
     "    \n",
     "    \n",
@@ -101,6 +133,13 @@
     "        \n",
     "    \n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Calculating Male/Female Distance ratio "
    ]
   },
   {
@@ -137,9 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'eu_dist_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_43619/3845291748.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0meu_dist_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'eu_dist_dict' is not defined"
+     ]
+    }
+   ],
    "source": [
     "eu_dist_dict"
    ]
